--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Service.in</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="skip">Skip</string>
+    <string name="next">Next</string>
+    <string name="first_slide_title">Get Inspired</string>
+    <string name="first_slide_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse ornare lectus sagittis eu habitasse sed. Sit ut venenatis dolor nunc.</string>
+    <string name="second_slide_title">Get Inspired</string>
+    <string name="second_slide_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse ornare lectus sagittis eu habitasse sed. Sit ut venenatis dolor nunc.</string>
+    <string name="third_slide_title">Get Inspired</string>
+    <string name="third_slide_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse ornare lectus sagittis eu habitasse sed. Sit ut venenatis dolor nunc.</string>
+    <string name="agreement">I agree with terms &amp; condition</string>
 </resources>
