Adding Flow Order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="activity">Activity</string>
     <string name="chat">Chat</string>
     <string name="profile">Profile</string>
+    <string name="worker_about">Tony Sumanto adalah seseorang yang ahli servis ac. iya sudah berpengalaman dalam bidang AC kurang lebih 10 tahun pengalaman. sudah menggantikan ribuan AC di jabodetabek. iya melayani untuk semua permasalahan AC, seperti ganti freon, refill freon, AC tidak dingin, AC berbunyi</string>
 </resources>
