Minor Update on Button Size

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
-    <string name="first_slide_title">Get Inspired</string>
-    <string name="first_slide_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse ornare lectus sagittis eu habitasse sed. Sit ut venenatis dolor nunc.</string>
-    <string name="second_slide_title">Get Inspired</string>
-    <string name="second_slide_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse ornare lectus sagittis eu habitasse sed. Sit ut venenatis dolor nunc.</string>
-    <string name="third_slide_title">Get Inspired</string>
-    <string name="third_slide_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitasse ornare lectus sagittis eu habitasse sed. Sit ut venenatis dolor nunc.</string>
+    <string name="first_slide_title">Temukan kebutuhanmu</string>
+    <string name="first_slide_text">Mencari solusi masalah cukup dalam beberapa tahapan sesuai dengan kriteria yang dibutuhkan.</string>
+    <string name="second_slide_title">Konsultasi bersama ahli</string>
+    <string name="second_slide_text">Masalah seringkali tidak dapat diselesaikan secara mandiri. Cobalah untuk konsulltasi bersama para ahli.</string>
+    <string name="third_slide_title">Dimana saja</string>
+    <string name="third_slide_text">Temukan Ahli yang tepat kapan saja dan dimana saja untuk membantu menyelesaikan permasalahan rumah.</string>
     <string name="agreement">I agree with terms &amp; condition</string>
     <string name="errorEmpty">Cannot be Empty</string>
     <string name="otp_verif">Verifikasi Nomor HP</string>
